# nocamel

./: README.md  pyproject.toml
docs/: index.html  nocamel.html
src/nocamel/: __init__.py  nocamel.py
tests/: camel_case_dont_modify.py  camel_case_fake_readme_dont_modify.md  fakeClass.py  readme.md  some_class.py  test_nocamel.py
